proxy baka error

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
+    "start" : "grunt serve --proxy-config proxy.config.json",
     "test": "karma start test\\karma.conf.js"
   }
 }
