Création de la page de détails pour les personnes

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "test": "karma start test\\karma.conf.js"
   },
   "dependencies": {
+    "angular-popeye": "^1.0.5",
     "eslint": "^4.19.1"
   }
 }
